[gd_scene load_steps=9 format=3 uid="uid://c6kv2s4q0n5mq"]

[ext_resource type="Script" path="res://Scenes/projectile.gd" id="1_vpbot"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_2cqne"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrag1"]
size = Vector2(10, 10)

[sub_resource type="Gradient" id="Gradient_65uxh"]
offsets = PackedFloat32Array(0, 0.995614)
colors = PackedColorArray(0.975, 0, 1, 1, 0.03, 0, 1, 0.703)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wwncj"]
gradient = SubResource("Gradient_65uxh")

[sub_resource type="Curve" id="Curve_641q3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hkmia"]
curve = SubResource("Curve_641q3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sjfsj"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector3(0, 1, 0)
initial_velocity_min = -10.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_hkmia")
color_ramp = SubResource("GradientTexture1D_wwncj")
turbulence_enabled = true
turbulence_noise_speed = Vector3(0, 1, 0)
turbulence_influence_max = 0.254

[node name="Projectile" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_vpbot")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_2cqne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rrag1")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 150
process_material = SubResource("ParticleProcessMaterial_sjfsj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
